# GrokSearch-rs

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md
.github/workflows/: bump.yml  release.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  TESTING.md
npm/grok-search-rs/: README.md  package.json  run.js
scripts/: bump-version.sh
src/: cache.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  mcp.rs  planning.rs  service.rs  toggle.rs
src/adapters/: anthropic_messages.rs  anthropic_to_xai.rs  chat_completions_request.rs  chat_completions_response.rs  grok_responses_request.rs  grok_responses_response.rs  mod.rs  sources.rs  xai_to_anthropic.rs
src/model/: anthropic.rs  mod.rs  search.rs  source.rs  tool.rs
src/providers/: anthropic.rs  firecrawl.rs  grok.rs  http.rs  mod.rs  openai_compatible.rs  tavily.rs  xai.rs
tests/: adapter_anthropic.rs  adapter_grok_responses.rs  config.rs  integration_compat.rs  integration_service.rs  logging.rs  openai_compatible_adapter.rs  planning.rs  service_contract.rs  source_merge.rs  tavily_parse.rs  toggle_builtin_tools.rs
